# Zaitoun_Loralai

./: .git_commit_msg.txt  .git_msg.txt  .gitignore  ADMIN_DASHBOARD_SETUP.md  COMMIT_MSG  COMMIT_MSG.txt  INTEGRATION_TEST.md  QUICKSTART.md  START.ps1  START.sh  commit_msg.txt  package-lock.json  package.json  start-frontend.ps1  start-frontend.sh
backend/: .env.example  .gitignore  README.md  RUN_LOCALLY.sh  SETUP.md  _db_check.py  alembic.ini  main.py  pyproject.toml  requirements.txt  seed.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2a9bd4613cac_merge_heads.py  3a7b5c9d1e2f_add_reviews_table.py  3d3329fcf7ee_add_homepage_content_table.py  4d8e6f2a1c3b_add_wishlist_table.py  5b9f7d3e2c1a_add_coupon_model_and_order_discount_fields.py  5e8ec852b1f6_initial_schema_from_existing_models.py  8260e65b8d3d_add_story_content_table.py  994784d31df7_add_recipe_tables.py  b81db91380b6_add_founders_table.py  fc89202f95f3_add_product_group_id_and_size_label.py
backend/scripts/: backfill_customer_orders.py
backend/src/: __init__.py  exceptions.py  logging_config.py  main.py  payment_processor.py  schemas.py
backend/src/api/v1/: __init__.py  admin.py  coupons.py  customers.py  founder.py  homepage.py  newsletter.py  orders.py  products.py  recipes.py  reviews.py  routes.py  story.py  (+3 more)
backend/src/config/: auth.py  cloudinary.py  database.py
backend/src/db/: migrate.py  migrate_customer_auth_phase1.py
backend/src/models/: __init__.py  database.py
backend/src/utils/: currency.py
backend/tests/: conftest.py  test_auth_passwords.py  test_products.py
(+88 files in other folders)
